# Cinetrack

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  bucketlist.py  content.py  custom_lists.py  goals.py  ratings.py  recommendations.py  reviews.py  watchlist.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: content_service.py  redis_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ContentDetails.tsx  Header.tsx  Navbar.tsx  Rating.tsx  Review.tsx  Search.tsx
frontend/src/hooks/: useAuth.ts  useDebounce.ts
frontend/src/pages/: BucketList.tsx  EpisodeDetails.tsx  Home.tsx  Login.tsx  PeopleIndex.tsx  PeopleSearch.tsx  PersonDetails.tsx  Recommendations.tsx  Register.tsx  Schedule.tsx  Search.tsx  ShowDetails.tsx  ShowIndex.tsx  Watchlist.tsx  WebSchedule.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
